--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -1,55 +1,96 @@
+<?php
+use Standard\StaticOptions\StaticOptions;
+use Standard\Permissions\Acl\Acl;
+$user = StaticOptions::getCurrentUser ();
+$acl = new Acl ( Acl::$config );
+?>
 <?php echo $this->doctype(); ?>
-
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <?php echo $this->headTitle('ZF2 '. $this->translate('Skeleton Application'))->setSeparator(' - ')->setAutoEscape(false) ?>
+<head>
+<meta charset="utf-8">
+<?php echo $this->headTitle('IWS : '. $this->translate('Digital Asset MAnagement Platform'))->setSeparator(' - ')->setAutoEscape(false)?>
+<?php echo $this->headMeta()->appendName('viewport', 'width=device-width, initial-scale=1.0')?>
+<!-- Le styles -->
+<?php
+echo $this->headLink ( array ('rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath () . '/img/favicon.ico' ) )
+    ->prependStylesheet ( $this->basePath () . '/libs/bootstrap/css/bootstrap-responsive.min.css' )
+    ->prependStylesheet ( $this->basePath () . '/css/padding-margin.css' )
+    ->prependStylesheet ( $this->basePath () . '/css/style.css' )
+    ->prependStylesheet ( $this->basePath () . '/libs/bootstrap/css/bootstrap.min.css' )?>
+<!-- Scripts -->
+<?php
+echo $this->headScript ()
+    ->prependFile ( $this->basePath () . '/libs/html5/js/html5.js', 'text/javascript', array ( 'conditional' => 'lt IE 9' ) )
+    ->prependFile ( $this->basePath () . '/libs/blockui/js/message.js' )
+    ->prependFile ( $this->basePath () . '/libs/blockui/js/blockui.js' )
+    ->prependFile ( $this->basePath () . '/libs/bootstrap/js/bootstrap.min.js' )
+    ->prependFile ( $this->basePath () . '/libs/jquery/js/jquery-2.0.3.min.js' )?>
+</head>
+<body>
+	<div class="container">
+		<header>
+			<div class="row">
+				<div class="span3">
+					
+				</div>
+			</div>
+			<div class="row-fluid">
+                <?php $user = StaticOptions::getCurrentUser();?>
+				<div class="span12">
+					<a href="<?php echo $this->url('home') ?>" class="pull-left"><img id="logo"
+						src="<?php echo $this->basePath()?>/images/IWS_Logo.png" alt="IWS" /></a>
 
-        <?php echo $this->headMeta()
-            ->appendName('viewport', 'width=device-width, initial-scale=1.0')
-            ->appendHttpEquiv('X-UA-Compatible', 'IE=edge')
-        ?>
-
-        <!-- Le styles -->
-        <?php echo $this->headLink(array('rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/img/favicon.ico'))
-                        ->prependStylesheet($this->basePath() . '/css/style.css')
-                        ->prependStylesheet($this->basePath() . '/css/bootstrap-theme.min.css')
-                        ->prependStylesheet($this->basePath() . '/css/bootstrap.min.css') ?>
-
-        <!-- Scripts -->
-        <?php echo $this->headScript()
-            ->prependFile($this->basePath() . '/js/bootstrap.min.js')
-            ->prependFile($this->basePath() . '/js/jquery.min.js')
-            ->prependFile($this->basePath() . '/js/respond.min.js', 'text/javascript', array('conditional' => 'lt IE 9',))
-            ->prependFile($this->basePath() . '/js/html5shiv.js',   'text/javascript', array('conditional' => 'lt IE 9',))
-        ; ?>
-
-    </head>
-    <body>
-        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="<?php echo $this->url('home') ?>"><img src="<?php echo $this->basePath('img/zf2-logo.png') ?>" alt="Zend Framework 2"/>&nbsp;<?php echo $this->translate('Skeleton Application') ?></a>
-                </div>
-                <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="<?php echo $this->url('home') ?>"><?php echo $this->translate('Home') ?></a></li>
-                    </ul>
-                </div><!--/.nav-collapse -->
+					<div class="pull-right margin-top20">
+						<ul class="nav nav-pills">
+							<li class="dropdown">
+                                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Welcome <?php echo " ".$user->getFirstname();?> <b class="caret"></b></a>
+								<ul class="dropdown-menu">
+								   									<li>
+									   <a href="<?php echo $this->url('user',array('controller'=>'logout','action'=>'index'));?>">Logout</a>
+								   </li>
+								</ul>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="navbar">
+    			<div class="navbar-inner">
+    				<div class="container">
+				        <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                            <span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+                        </button>
+    					<a class="brand" href="<?php echo $this->url('home') ?>">
+    					   <span class="hidden-phone"><?php echo $this->translate('Digital Asset Management Platform') ?></span>
+    					   <span class="visible-phone"><?php echo $this->translate('DAMP') ?></span>
+					   </a>
+    					<div class="nav-collapse collapse">
+    				    <?php echo $this->navigation ( 'navigation' )->setRole ( $user->getGroupName() )->setAcl ( $acl )->menu ()->setPartial("main/navigation")->renderPartial();?>
+    					</div>
+    				</div>
+    			</div>
             </div>
-        </nav>
-        <div class="container">
-            <?php echo $this->content; ?>
-            <hr>
-            <footer>
-                <p>&copy; 2005 - <?php echo date('Y') ?> by Zend Technologies Ltd. <?php echo $this->translate('All rights reserved.') ?></p>
-            </footer>
-        </div> <!-- /container -->
-        <?php echo $this->inlineScript() ?>
+		</header>
+		<div id="wrapper">
+            <?php
+                echo $this->navigation ( 'navigation' )
+                ->breadcrumbs ()
+                ->setRenderInvisible(true)
+                ->setLinkLast (false )
+                ->setMinDepth ( 0 )
+                ->setPartial('main/breadcrumb');
+            ?>
+        	<?php echo $this->content; ?>
+        	<hr />
+		</div>
+		<footer>
+			<p class="text-center">&copy; 2012 - <?php echo date('Y') ?> by XYZ Group Inc. <?php echo $this->translate('All rights reserved.') ?></p>
+			<p class="pull-right hide"><?php echo $this->translate('Powered By: ') ?><a
+					target="_blank" href="http://www.xyz.com"><strong>XYZ Technologies</strong></a>
+			</p>
+		</footer>
+	</div>
+	<!-- /container -->
+        <?php echo $this->inlineScript()?>
     </body>
 </html>
