--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -8,7 +8,7 @@ $acl = new Acl ( Acl::$config );
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<?php echo $this->headTitle('IWS : '. $this->translate('Digital Asset MAnagement Platform'))->setSeparator(' - ')->setAutoEscape(false)?>
+<?php echo $this->headTitle('DOTZ : '. $this->translate('Digital Asset MAnagement Platform'))->setSeparator(' - ')->setAutoEscape(false)?>
 <?php echo $this->headMeta()->appendName('viewport', 'width=device-width, initial-scale=1.0')?>
 <!-- Le styles -->
 <?php
@@ -38,7 +38,7 @@ echo $this->headScript ()
                 <?php $user = StaticOptions::getCurrentUser();?>
 				<div class="span12">
 					<a href="<?php echo $this->url('home') ?>" class="pull-left"><img id="logo"
-						src="<?php echo $this->basePath()?>/images/IWS_Logo.png" alt="IWS" /></a>
+						src="<?php echo $this->basePath()?>/img/damp.jpg" alt="DOTZ" /></a>
 
 					<div class="pull-right margin-top20">
 						<ul class="nav nav-pills">
