--- a/module/Application/view/layout/login-layout.phtml
+++ b/module/Application/view/layout/login-layout.phtml
@@ -6,7 +6,7 @@
 <?php echo $this->headMeta()->appendName('viewport', 'width=device-width, initial-scale=1.0')?>
 <!-- Le styles -->
 <?php
-echo $this->headLink ( array ('rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath () . '/img/favicon.ico' ) )
+echo $this->headLink ( array ('rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath () . '/img/damp.jpg' ) )
     ->prependStylesheet ( $this->basePath () . '/libs/bootstrap/css/bootstrap-responsive.min.css' )
     ->prependStylesheet ( $this->basePath () . '/css/padding-margin.css' )
     ->prependStylesheet ( $this->basePath () . '/css/login.css' )
