--- a/module/User/view/user/login/index.phtml
+++ b/module/User/view/user/login/index.phtml
@@ -8,11 +8,9 @@
 <?php echo $this->form()->openTag($form);?>
     <div class="row-fluid">
     
-    <img id="logo" src="<?php echo $this->basePath()?>/images/IWS_Logo.png"
+    <img id="logo" src="<?php echo $this->basePath()?>/img/damp.jpg"
 		alt="IWS" />
-	<h3 class="form-signin-heading">Please sign in</h3>
     <?php
-        
         echo $this->formCollection($form);
     ?>
 	</div>
