--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -24,7 +24,10 @@ echo $this->headScript ()
     ->prependFile ( $this->basePath () . '/libs/blockui/js/message.js' )
     ->prependFile ( $this->basePath () . '/libs/blockui/js/blockui.js' )
     ->prependFile ( $this->basePath () . '/libs/bootstrap/js/bootstrap.min.js' )
-    ->prependFile ( $this->basePath () . '/libs/jquery/js/jquery-2.0.3.min.js' )?>
+    ->prependFile ( $this->basePath () . '/js/gmap3.min.js' )
+    ->prependFile ( $this->basePath () . '/libs/jquery/js/jquery-2.0.3.min.js' )
+    ->prependFile ( "http://maps.google.com/maps/api/js?sensor=false&amp;language=en" )
+?>
 </head>
 <body>
 	<div class="container">
