--- a/module/Application/view/layout/login-layout.phtml
+++ b/module/Application/view/layout/login-layout.phtml
@@ -24,7 +24,7 @@ echo $this->headLink ( array ('rel' => 'shortcut icon', 'type' => 'image/vnd.mic
 	<div id="footer">
 		<div class="container">
 			<div class="credit">
-				<p class="text-center">&copy; 2012 - <?php echo date('Y') ?> by XYZ Inc. <?php echo $this->translate('All rights reserved.') ?></p>
+				<p class="text-center">&copy; 2012 - <?php echo date('Y') ?> by Dotz Inc. <?php echo $this->translate('All rights reserved.') ?></p>
                 <p class="pull-right hide"><?php echo $this->translate('Powered By: ') ?><a
 					target="_blank" href="http://www.xyz.com"><strong>XYZ
 						Technologies</strong></a></p>
