--- a/module/User/view/user/manage/index.phtml
+++ b/module/User/view/user/manage/index.phtml
@@ -1,117 +1,103 @@
-<?php $this->headLink()->appendStylesheet($this->basePath() . '/libs/datatables/css/datatables.css')?>
-<?php $this->headLink()->appendStylesheet($this->basePath() . '/libs/datatables/css/datatables.bootstrap.css')?>
-
-<?php $this->headScript()->appendFile($this->basePath() . '/libs/datatables/js/datatables.min.js')?>
-<?php $this->headScript()->appendFile($this->basePath() . '/libs/datatables/js/datatables.bootstrap.js')?>
-<?php $this->headScript()->appendFile($this->basePath() . '/libs/datatables/js/datatables.aksplugin.js')?>
-<h2>
-	Managers <a
-		href="<?php echo $this->url("user",array("controller"=>"manage","action" => "add"));?>"
-		class="btn btn-primary pull-right">Add Manager</a>
-</h2>
-<div class="row-fluid margin-top20">
-	<div class="span12">
-		<table class="table" id="tblUsers">
-			<thead>
-				<tr>
-					<th>First Name</th>
-					<th>Last Name</th>
-					<th>Email</th>
-					<th>Role</th>
-					<th>Actions</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td colspan="6" class="dataTables_empty"><?php echo $this->translate('Loading Managers'); ?></td>
-				</tr>
-			</tbody>
-		</table>
-	</div>
-</div>
-<div id="delete-template" class="modal hide fade">
-	<form
-		action="<?php echo $this->url('user',array("controller"=>"manage","action" => "delete"));?>"
-		method="post">
-		<input type="hidden" name="delete-user-id" id="delete-user-id"
-			value="" />
-		<div class="modal-header">
-			<button type="button" class="close" data-dismiss="modal">x</button>
-			<h3>Confirm Delete</h3>
-		</div>
-		<div class="modal-body">
-			<p>Are you sure you want to delete <strong id="delete-target-name"></strong>?</p>
-		</div>
-		<div class="modal-footer">
-			<button class="btn" data-dismiss="modal">Close</button>
-			<input type="submit" class="btn btn-primary" value="Delete User" />
-		</div>
-	</form>
-</div>
-<script type="text/javascript">
-(function($){
-	$(document).ready(function(){
-		window.grid = dataTable({
-			"sDom": "<'row hide'<'span8'l><'span8'f>r>t<'row-fluid'<'span6'i><'span6'p>>",
-			"sPaginationType": "bootstrap",
-			"oLanguage": {
-				"sLengthMenu": "_MENU_ records per page"
-			},
-			"aoColumns": [
-							{ "sName": "firstname" },
-							{ "sName": "lastname" },
-							{ "sName": "email" },
-							{ "sName": "group_id"},
-							{ "sName": "actions", bSortable:false}
-						 ],
-			id : $('#tblUsers'),
-			sAjaxSource: "<?php echo $this->url("user",array("controller"=>"manage","action"=>"grid"));?>"
-		});
-	});
-	$(document).on("click","a.btn-primary.delete",function(e){
-		// Replace the name for categoy 
+<?php $this->headLink()->appendStylesheet($this->basePath() . '/libs/datatables/css/datatables.css')?>
+<?php $this->headLink()->appendStylesheet($this->basePath() . '/libs/datatables/css/datatables.bootstrap.css')?>
+
+<?php $this->headScript()->appendFile($this->basePath() . '/libs/datatables/js/datatables.min.js')?>
+<?php $this->headScript()->appendFile($this->basePath() . '/libs/datatables/js/datatables.bootstrap.js')?>
+<?php $this->headScript()->appendFile($this->basePath() . '/libs/datatables/js/datatables.aksplugin.js')?>
+<h2>
+	Managers <a
+		href="<?php echo $this->url("user",array("controller"=>"manage","action" => "add"));?>"
+		class="btn btn-primary pull-right">Add Manager</a>
+</h2>
+<div class="row-fluid margin-top20">
+	<div class="span12">
+		<table class="table" id="tblUsers">
+			<thead>
+				<tr>
+					<th>First Name</th>
+					<th>Last Name</th>
+					<th>Email</th>
+					<th>Role</th>
+					<th>Actions</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td colspan="6" class="dataTables_empty"><?php echo $this->translate('Loading Managers'); ?></td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+</div><div id="delete-success-template" class="modal hide fade">	<div class="modal-body">		<div class="alert  alert-danger">			<button type="button" class="close" data-dismiss="modal">&times;</button>			<h4>Manager deleted successfuly</h4>			<div id="company-messages">				You will now be redirected to manager listings.			</div>		</div>	</div></div><div id="waiting-template" class="modal hide fade"	data-backdrop="static" data-keyboard="false">	<div class="modal-header">		<h3>Please Wait...</h3>	</div>	<div class="modal-body">Please wait while deleting.	</div></div>
+<div id="delete-template" class="modal hide fade">
+	<form
+		action="<?php echo $this->url('user',array("controller"=>"manage","action" => "delete"));?>"
+		method="post">
+		<input type="hidden" name="delete-user-id" id="delete-user-id"
+			value="" />
+		<div class="modal-header">
+			<button type="button" class="close" data-dismiss="modal">x</button>
+			<h3>Confirm Delete</h3>
+		</div>
+		<div class="modal-body">
+			Are you sure you want to delete this manager?		<ul>			<li>This can not be reverted back.</li>			<li>This will refrain the manager from logging in.</li>		</ul>
+		</div>
+		<div class="modal-footer">
+			<button class="btn" data-dismiss="modal">Close</button>
+			<input type="submit" class="btn btn-primary btn-danger" value="Delete User" />
+		</div>
+	</form>
+</div>
+<script type="text/javascript">
+(function($){
+	$(document).ready(function(){
+		window.grid = dataTable({
+			"sDom": "<'row hide'<'span8'l><'span8'f>r>t<'row-fluid'<'span6'i><'span6'p>>",
+			"sPaginationType": "bootstrap",
+			"oLanguage": {
+				"sLengthMenu": "_MENU_ records per page"
+			},
+			"aoColumns": [
+							{ "sName": "firstname" },
+							{ "sName": "lastname" },
+							{ "sName": "email" },
+							{ "sName": "group_id"},
+							{ "sName": "actions", bSortable:false}
+						 ],
+			id : $('#tblUsers'),
+			sAjaxSource: "<?php echo $this->url("user",array("controller"=>"manage","action"=>"grid"));?>"
+		});
+	});
+	$(document).on("click","a.btn-primary.delete",function(e){
+		// Replace the name for categoy
         var deleteTemplate = $("#delete-template");
-        
-        deleteTemplate.find("#delete-target-name").html($(this).data("target-name"));
-        
         // Replace the Category Id where the files needs to be updated
-        deleteTemplate.find("#delete-user-id").val($(this).data("target-id"));
-	});
-
-	$(document).on("submit","#delete-template form",function(e){
-    	var message = false;
-    	var self = this;
-        $(this).queue(function(next){
-        	message = new Message({
-                beforeShow:function (self) {
-                    this.alternateMessage = this.showLoadingMessage("Please wait while deleting...");
-                },
-                onBlock:next
-            });
-		}).queue(function(next){
-			var user_id = $(this).find("#delete-user-id").val();
-			$.ajax({
-				url:$(this).attr("action"),
-				dataType: 'json',
-				type : 'post',
-				data:{user_id:user_id},
-				success: function ( data )
-				{
-					if(data.success) {
-						message.showSuccessMessage("Manager deleted successfully!");
-						$(self).closest(".modal").modal("hide");
-						window.grid.fnDraw(false);
-					} else {
-						message.showErrorMessage("Cannot delete Manager!");	
+        deleteTemplate.find("#delete-user-id").val($(this).attr("delete-attr-id"));        deleteTemplate.modal('show');
+	});
+
+	$(document).on("submit","#delete-template form",function(e){
+    	var message = false;
+    	var self = $(this);    	var modal = self.closest(".modal");    	var waitingModal = $("#waiting-template");    	var deletesuccess = $("#delete-success-template");
+    	self.queue(function(next){			modal.modal("hide");			modal.on("hidden",next);		}).queue(function(next){			waitingModal.modal("show");			waitingModal.on("shown",next);		}).queue(function(next){
+			var user_id = $(this).find("#delete-user-id").val();
+			$.ajax({
+				url:$(this).attr("action"),
+				dataType: 'json',
+				type : 'post',
+				data:{user_id:user_id},
+				success: function ( data )
+				{
+					if(data.success) {						waitingModal.modal('hide');
+						deletesuccess.modal('show');						deletesuccess.on('shown',next);
+					} else {	
 					}
 					setTimeout(next,1500);
 				}
-			});
-		}).queue(function(next){
-			message.close();
-			next();
-		});
-        e.preventDefault();
-	});
-})(jQuery);
+			});
+		}).queue(function(next){			document.location.href = document.location.href;
+			next();
+		});
+        e.preventDefault();
+	});
+})(jQuery);
 </script>
